Tue Feb  8 13:57:46 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* ports.c: Doc patches from Richard Kim.  Pasted from MIT Scheme.
	Thanks Richard!

Mon Feb  7 09:07:31 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* macros.c: Doc patches from Richard Kim.  Pasted from scm.texi.

Sun Feb  6 20:26:21 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* pairs.c: Doc patches from Richard Kim.  Pasted from MIT Scheme
	(which is GNU GPL'd).

2000-01-31  Gary Houston  <ghouston@arglist.com>

	* strings.h: don't use SCM_P.  don't include <string.h>.
	* error.c, gh_data.c, ports.c, script.c, strop.c: include <string.h>.
	
	* strings.c (scm_string_ref): make the 2nd argument compulsory.
	previously it defaulted to zero for no good reason that I can see.
	use a local variable for SCM_INUM (k).  replace
	SCM_VALIDATE_INUM_DEF with SCM_VALIDATE_INUM_COPY.

	(scm_makfromstr): cosmetic changes.

	(scm_string): Accept only chars in the list, not strings, for
	conformance to R5RS (particularly for list->string, which is
	supposed to be the inverse of string->list.)  remove
	SCM_DEFER_INTS/SCM_ALLOW_INTS, which is unnecessary since
	scm_makstr handles the cell allocation.  when reporting wrong-type
	arg, don't report the position as 1.

	* posix.c (scm_init_posix): intern PIPE_BUF if it's defined.

2000-01-29  Gary Houston  <ghouston@arglist.com>

	* posix.c (scm_pipe): rewrote the docstring.

	* filesys.c (scm_select, retrieve_select_type, get_element,
	fill_select_type, set_element): modified so that Scheme
	"select" tests port buffers for the ability to provide input
	or accept output.  Previously only the underlying file descriptors
	were checked.  Rewrote the docstring.
 
Thu Jan 27 10:14:25 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* vectors.c, symbols.c, strorder.c: Documentation cut and pasted
 	from Gregg Reynolds.  Thanks Gregg!

Thu Jan 27 09:59:38 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* strop.c (scm_i_index): Obfuscated commented-out SCM_DEFINE by